"handle OnLine/Offline Modes"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".RepoApplication"
+        android:name=".ui.RepoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="Trending"
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GitTrendingApi">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
